package METRO.CRO.MESSAGES;

message TeacherOpenClass {
	optional string username = 1;
	optional string classid = 2;
}